# c-exercises

./: .gitignore  CMakeLists.txt
C_diffrent_exercise/: CMakeLists.txt  MyFunctions.cpp  Uebungsaufgabe_1.cpp  mini_control_statement.cpp  summe_positiv_anzahl_negativ.cpp  taschengeld_rechner.cpp
aufgabe_4/: CMakeLists.txt  aufgabe_41.cpp  aufgabe_42.c  aufgabe_43.c  aufgabe_44.c
c/: CMakeLists.txt  sizeof_operator.c  type_conversion.c
